--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,23 @@
     z-index: 99;
     padding-block: 2.5em;
     width: 100%;
+    /*backdrop-filter: brightness(90%)*/
+}
+
+.header:has(.main-nav--mobile)::after {
+    position: absolute;
+    content: '';
+    background-color: hsla(0, 0%, 0%, 0.4);
+    opacity: 0;
+    z-index: -1;
+    top: 0;
+    transition: opacity 0.45s linear;
+}
+
+.header:has(.main-nav--mobile.open)::after {
+    height: 100dvh;
+    width: 100%;
+    opacity: 1;
 }
 
 .header h1 {
@@ -19,13 +36,13 @@
     z-index: 100;
     background-color: transparent;
     top: 0;
-    left: 2em;
+    left: 1.85em;
     outline: transparent;
     border: none;
 }
 
 .header button img {
-    width: 1.35em;
+    width: 1.25em;
 }
 
 .header nav ul {
@@ -34,6 +51,7 @@
 }
 
 .header .main-nav--mobile {
+    background-color: rgb(255, 245, 228);
     position: absolute;
     padding-block: 2.5em;
     top: 0;
@@ -41,11 +59,19 @@
     width: 0;
     overflow: hidden;
     transition: width 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
-    background-color: rgb(241, 240, 233);
 }
 
 .header .main-nav--mobile.open {
     width: 100dvw;
+}
+
+.header .main-nav--mobile.open:before {
+    content: '';
+    position: absolute;
+    background-color: rgb(255, 157, 35);
+    height: 5px;
+    width: 65%;
+    bottom: 0;
 }
 
 .header .main-nav--mobile ul {
@@ -69,11 +95,12 @@
     margin-right: 1.5em;
 }
 
+/* main*/
 .img-slider {
+    position: relative;
     height: 100vmin;
     width: 100dvw;
     overflow: hidden;
-    position: relative;
 }
 
 .img-slider ul {
@@ -88,26 +115,63 @@
 }
 
 .img-slider ul li {
+    background-image: var(--bg-img);
     background-size: cover;
     background-repeat: no-repeat;
     height: inherit;
-    width: 100dvw;
+    width: inherit;
 }
 
 .img-slider ul li:nth-of-type(1) {
-    background-image: url('assets/images/mobile-image-hero-1.jpg');
+    --bg-img: url('assets/images/mobile-image-hero-1.jpg');
 }
 
 .img-slider ul li:nth-of-type(2) {
-    background-image: url('assets/images/mobile-image-hero-2.jpg');
+    --bg-img: url('assets/images/mobile-image-hero-2.jpg');
 }
 
 .img-slider ul li:nth-of-type(3) {
-    background-image: url('assets/images/mobile-image-hero-3.jpg');
+    --bg-img: url('assets/images/mobile-image-hero-3.jpg');
 }
 
-.hero-wrapper {
+.info-container {
     position: relative;
+}
+
+.sect-wrapper {
+    padding: 3em 1.5em;
+    max-width: 560px;
+    margin: 0 auto;
+}
+
+.sect-wrapper a.cta {
+    font-weight: bold;
+    letter-spacing: 5px;
+}
+
+.hero-section {
+    opacity: 0;
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    transition: visibility 0s linear, opacity 0.35s cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
+}
+
+.hero-section.active {
+    visibility: visible;
+    opacity: 1;
+    height: fit-content;
+    width: fit-content;
+}
+
+.hero-section h1 {
+    font-size: 2.45em;
+    margin-bottom: 0.35em;
+}
+
+.hero-section p {
+    line-height: 1.5;
+    margin-bottom: 1em;
 }
 
 .btn-wrapper {
@@ -119,5 +183,104 @@
 .btn-wrapper button {
     background-color: rgb(29, 22, 22);
     padding: 1.1em 1.5em;
+}
+
+@media only screen and (min-width: 650px) {
+    .header {
+        justify-content: space-between;
+        padding-inline-start: 2.5em;
+    }
+
+    .header h1 {
+        font-size: 2.4rem;
+        margin: 0;
+    }
+
+    .header .main-nav ul {
+        gap: 2.5em;
+        background-color: hsla(0, 0%, 0%, 0.15);
+        padding: 1.5em 2.5em;
+    }
+
+    .header .main-nav ul a {
+        font-size: 1.15rem;
+        color: rgb(241, 240, 233);
+    }
+
+    .img-slider {
+        height: 60vmin;
+        width: 100dvw;
+    }
+
+    .img-slider ul li:nth-of-type(1) {
+        --bg-img: url('assets/images/desktop-image-hero-1.jpg');
+    }
+
+    .img-slider ul li:nth-of-type(2) {
+        --bg-img: url('assets/images/desktop-image-hero-2.jpg');
+    }
+
+    .img-slider ul li:nth-of-type(3) {
+        --bg-img: url('assets/images/desktop-image-hero-3.jpg');
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .header {
+        justify-content: start;
+        padding: 3em 2.5em;
+        gap: 2.5em;
+    }
+
+    .header .main-nav ul {
+        gap: 2.5em;
+        background-color: transparent;
+    }
+
+    .main > .hero-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+        max-height: 540px;
+    }
+
+    .img-slider {
+        width: min(100%, 840px);
+        height: 540px;
+    }
+
+    .info-container, .btn-wrapper {
+        position: static;
+    }
+
+    .info-container {
+        display: grid;
+        grid-template-rows: 2fr 65px;
+        grid-template-columns: 1fr;
+        row-gap: 3em;
+        justify-content: space-between;
+        padding-inline: 2.5em;
+        height: inherit;
+    }
+
+    .sect-wrapper {
+        margin: auto auto -1.5em auto;
+    }
+
+    .hero-section {
+        padding: 0;
+        margin-top: auto;
+    }
+
+    .btn-wrapper {
+        margin-left: -2.5em;
+        margin-top: 1px;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .main > .hero-container {
+        grid-template-columns: 840px 1fr;
+    }
 
 }
