--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgb(29, 22, 22);
-  background-color: rgb(241, 240, 233);
+  background-color: rgb(255, 245, 228);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,6 +37,9 @@ a{
   color: inherit;
   text-decoration: none;
 }
+li, a, button {
+  font-family: inherit;
+}
 button {
   border: 1px solid transparent;
   font-size: 1rem;
@@ -53,3 +56,6 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.light-txt{
+  color: rgb(112, 81, 56);
+}
