--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,17 @@
   color-scheme: light dark;
   color: rgb(29, 22, 22);
   background-color: rgb(255, 245, 228);
-
+  scroll-behavior: auto;
   font-synthesis: none;
+  font-optical-sizing: auto;
+
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 html {
   box-sizing: border-box;
+
 }
 
 *, *:after, *:before {
@@ -22,12 +25,14 @@ html {
   margin: unset;
 }
 
-
-
 body {
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
+li, a, button {
+  font-family: inherit;
+}
+
 
 li {
   list-style: none;
@@ -36,9 +41,6 @@ a{
   display: inline-block;
   color: inherit;
   text-decoration: none;
-}
-li, a, button {
-  font-family: inherit;
 }
 button {
   border: 1px solid transparent;
@@ -55,7 +57,12 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: fill;
+}
 .light-txt{
+  line-height: 1.5;
   color: rgb(112, 81, 56);
 }
